@@ -1,0 +1,4 @@
+Feature: woo yeah
+
+  Background:
+    Given passing step without a table
