@@ -8,6 +8,7 @@ module Cucumber
       def initialize(background, comment, tags, name, feature_elements)
         @background, @comment, @tags, @name, @feature_elements = background, comment, tags, name, feature_elements
 
+        background.feature = self if background
         @feature_elements.each do |feature_element|
           feature_element.feature = self
         end
