@@ -10,6 +10,7 @@ With the addition of Latvian and Hungarian Cucumber now supports 32(!!) language
 * Pick up failure on after hook (#272 Aslak Hellesøy)
 
 === Bugfixes
+* Feature which only has a Background with steps causes an exception (#306 Aslak Hellesøy)
 * Gem no longer depends on Hoe (Aslak Hellesøy)
 * Span html tags appear on HTML results with 0.3.0 (#299 Aslak Hellesøy)
 * Fixed incorrect colours in pretty formatter's table headers for outline tables (Aslak Hellesøy)
